- Implemented CSS variables for consistent theming across the application. - Enhanced user experience with smooth transitions between light and dark modes. - Updated layout styles to ensure readability and accessibility in both modes. - Adjusted background, text colors, and UI elements to suit dark mode aesthetics.

--- a/css/site.css
+++ b/css/site.css
@@ -307,7 +307,20 @@ footer .card {
   background-color: var(--gh-theme-800);
 }
 
+.build-by-text {
+  color: var(--gh-gray-150);
+}
+
 /* END: Footer styles */
+
+/* Carousel */
+
+.carousel-item img {
+  width: 100%;
+  height: 400px; /* Fija la altura de las imágenes */
+  object-fit: contain; /* Esto asegura que la imagen mantenga sus proporciones mientras llena el contenedor */
+  background-color: var(--gh-gray-850);
+}
 
 /***** START: Media Queries ******/
 
